13:14:02 wlan0: tx error 0x20, buf 31!
13:14:02 wlan0: tx error 0x20, buf 00!
13:14:13 wlan0: tx error 0x20, buf 01!
13:14:13 wlan0: tx error 0x20, buf 02!
13:14:13 wlan0: tx error 0x20, buf 03!
13:14:13 wlan0: tx error 0x20, buf 04!
13:14:13 wlan0: tx error 0x20, buf 05!
13:14:13 wlan0: tx error 0x20, buf 06!
13:14:13 wlan0: tx error 0x20, buf 07!
13:14:13 wlan0: tx error 0x20, buf 08!

[20051201] 0.3.21
* Thanks Carlos Martin
* Completely serialize USB rx. Tiny speed loss,
  but even more safe wrt reordering.
* A few msleeps removed

[20051128] 0.3.20
* we will use only 2 rx usb buffers now. No apparent speed loss,
  eliminates usb packet reordering risk.
* two USB fixes for real bugs and one fix for possible leak
  of an urb on error path. Thanks Carlos Martin <carlosmn@gmail.com>.

[20051116] 0.3.19
* a few small fixes accumulated over time, nothing spectacular

[20051031] 0.3.18
* hopefully a final touch on USB tx autorate

[20051022] 0.3.17
* PCI command submission made simpler

[20051021] 0.3.16
* Small changes mostly designed to break USB ;)
* Auto rate handling for USB is still not confirmed to work.
  I need USB logs from the users.

[20051020] 0.3.15
* Auto rate handling for USB is implemented. Untested.

[20051019]
* first step in proper auto rate handling for USB

[20051018] 0.3.14
* update for 2.6.14-rc4-mm1
* Kconfig bug (error if ACX=y, ACX_USB=y, USB=m) fixed
* PARANOID_LOCKING off by default

[20051016] 0.3.13
* Revert 20051013 fix, we have one which actually works.
  Thanks Jacek Jablonski <yacek87@gmail.com> for testing!

[20051013]
* trying to fix "yet another similar bug"
* usb fix by Carlos Martin

[20051012] 0.3.12
* acx_l_clean_tx_desc bug fixed - was stopping tx completely
  at high load. (It seems there exists yet another similar bug!)
* "unknown IE" dump was 2 bytes too short - fixed
* DUP logging made less noisy
* another usb fix by Carlos Martin <carlosmn@gmail.com>

[20051003]