@@ -104,6 +104,10 @@ TODO: from Efthym <efthym@gmx.net>:
 13:14:13 wlan0: tx error 0x20, buf 07!
 13:14:13 wlan0: tx error 0x20, buf 08!
 
+[20051202]
+* acx_s_update_card_settings cosmetic change
+  (but wasn't run tested)
+
 [20051201] 0.3.21
 * Thanks Carlos Martin
 * Completely serialize USB rx. Tiny speed loss,
